--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -16,7 +16,7 @@ dependencies {
      * Compile Only Dependencies
      *******************************/
 
-    compileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}") { transitive = false }
+    compileOnly("org.apache.hadoop:hadoop-annotations")              { transitive = false }
 
     /*******************************
      * Implementation Dependencies
@@ -39,28 +39,25 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-actuator')
     implementation('io.micrometer:micrometer-registry-prometheus')
 
-    implementation("org.apache.hadoop:hadoop-hdfs-client:${hadoopVersion}") { transitive = false }
+    implementation("org.apache.hadoop:hadoop-hdfs-client")           { transitive = false }
 
     /*******************************
-     * These JARs below are needed for Java 11
-     * jcenter doesn't have full com.sun.xml.bind:jaxb-core/jaxb-impl packages,
-     * using glassfish distro
+     * These JARs below (and its transitive dependencies, other than txw2 [for writing XML docs]) are needed for Java 11
+     * jcenter doesn't have full com.sun.xml.bind:jaxb-core/jaxb-impl packages, using glassfish distro
      *******************************/
 
-    implementation("javax.xml.bind:jaxb-api:2.3.0") { transitive = false }
-    implementation("org.glassfish.jaxb:jaxb-core:2.3.0") { transitive = false }
-    implementation("org.glassfish.jaxb:jaxb-runtime:2.3.0") { transitive = false }
-    implementation("com.sun.istack:istack-commons-runtime:3.0.8") { transitive = false }
-    implementation("javax.activation:activation:1.1.1") { transitive = false }
+    implementation("org.glassfish.jaxb:jaxb-runtime")   {
+        exclude module: 'txw2'
+    }
 
     /*******************************
      * Test Dependencies
      *******************************/
 
-    testCompileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
-    testImplementation("com.esotericsoftware:kryo:3.0.3")
+    testCompileOnly("org.apache.hadoop:hadoop-annotations")
+    testImplementation("com.esotericsoftware:kryo")
     testImplementation("commons-io:commons-io")
-    testImplementation("org.simplify4u:slf4j-mock:2.1.0") // for MDC mocking
+    testImplementation("org.simplify4u:slf4j-mock") // for MDC mocking
 
     developmentOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
