--- a/server/pxf-api/build.gradle
+++ b/server/pxf-api/build.gradle
@@ -17,7 +17,7 @@ dependencies {
      * API Dependencies
      *******************************/
 
-    api("org.apache.hadoop:hadoop-common:${hadoopVersion}") { transitive = false }
+    api("org.apache.hadoop:hadoop-common")                           { transitive = false }
     api("org.springframework.boot:spring-boot-starter")
     api('org.springframework.boot:spring-boot-starter-web')
 
@@ -25,7 +25,7 @@ dependencies {
      * Compile Only Dependencies
      *******************************/
 
-    compileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
+    compileOnly("org.apache.hadoop:hadoop-annotations")
 
     /*******************************
      * Implementation Dependencies
@@ -40,22 +40,21 @@ dependencies {
     implementation("commons-lang:commons-lang")
     implementation("org.apache.commons:commons-lang3")
 
-    implementation("org.apache.hadoop:hadoop-auth:${hadoopVersion}") { transitive = false }
-    implementation("org.codehaus.woodstox:stax2-api:3.1.4")      { transitive = false }
-    implementation("com.fasterxml.woodstox:woodstox-core:5.0.3") { transitive = false }
-    implementation("com.fasterxml.jackson.core:jackson-core") { transitive = false }
-    implementation("com.fasterxml.jackson.core:jackson-databind") { transitive = false }
-    implementation("com.esotericsoftware:kryo:3.0.3") { transitive = false }
+    implementation("org.apache.hadoop:hadoop-auth")                  { transitive = false }
+    implementation("org.codehaus.woodstox:stax2-api")                { transitive = false }
+    implementation("com.fasterxml.woodstox:woodstox-core")           { transitive = false }
+    implementation("com.fasterxml.jackson.core:jackson-core")        { transitive = false }
+    implementation("com.fasterxml.jackson.core:jackson-databind")    { transitive = false }
+    implementation("com.esotericsoftware:kryo")                      { transitive = false }
 
     /*******************************
      * Test Dependencies
      *******************************/
 
-    testCompileOnly("org.apache.hadoop:hadoop-annotations:${hadoopVersion}")
-
-    testImplementation("com.esotericsoftware:minlog:1.3.0")
-    testImplementation("com.esotericsoftware:reflectasm:1.11.6")
-    testImplementation('org.mockito:mockito-inline:3.1.0')
+    testCompileOnly("org.apache.hadoop:hadoop-annotations")
+    testImplementation("com.esotericsoftware:minlog")
+    testImplementation("com.esotericsoftware:reflectasm")
+    testImplementation('org.mockito:mockito-inline')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
