--- a/server/pxf-hbase/build.gradle
+++ b/server/pxf-hbase/build.gradle
@@ -13,24 +13,24 @@ dependencies {
      * Compile Only Dependencies
      *******************************/
 
-    compileOnly("com.google.code.findbugs:annotations:1.3.9")
-    compileOnly("org.apache.hbase:hbase-annotations:${hbaseVersion}")
+    compileOnly("com.google.code.findbugs:annotations")
+    compileOnly("org.apache.hbase:hbase-annotations")
 
     /*******************************
      * Implementation Dependencies
      *******************************/
 
     implementation(project(':pxf-api'))
-    implementation("com.google.protobuf:protobuf-java:2.5.0")
+    implementation("com.google.protobuf:protobuf-java")
     implementation("commons-collections:commons-collections")
-    implementation("org.apache.hbase:hbase-client:${hbaseVersion}")   { transitive = false }
-    implementation("org.apache.hbase:hbase-common:${hbaseVersion}")   { transitive = false }
-    implementation("org.apache.hbase:hbase-protocol:${hbaseVersion}") { transitive = false }
-    implementation("org.apache.htrace:htrace-core:3.1.0-incubating")  { transitive = false }
-    implementation("org.apache.zookeeper:zookeeper:3.4.6")            { transitive = false }
-    implementation("io.netty:netty-common:4.1.59.Final")              { transitive = false }
-    implementation("io.netty:netty-transport:4.1.59.Final")           { transitive = false }
-    implementation("com.yammer.metrics:metrics-core:2.2.0")           { transitive = false }
+    implementation("org.apache.hbase:hbase-client")                  { transitive = false }
+    implementation("org.apache.hbase:hbase-common")                  { transitive = false }
+    implementation("org.apache.hbase:hbase-protocol")                { transitive = false }
+    implementation("org.apache.htrace:htrace-core")                  { transitive = false }
+    implementation("org.apache.zookeeper:zookeeper")                 { transitive = false }
+    implementation("io.netty:netty-common")                          { transitive = false }
+    implementation("io.netty:netty-transport")                       { transitive = false }
+    implementation("com.yammer.metrics:metrics-core")                { transitive = false }
 
     implementation("org.springframework.boot:spring-boot-starter-log4j2")
 
@@ -38,11 +38,10 @@ dependencies {
      * Test Dependencies
      *******************************/
 
-    testImplementation("com.esotericsoftware:minlog:1.3.0")
-    testImplementation("com.esotericsoftware:reflectasm:1.11.6")
-    testCompileOnly("com.google.code.findbugs:annotations:1.3.9")
-    testCompileOnly("org.apache.hbase:hbase-annotations:${hbaseVersion}")
-
+    testCompileOnly("com.google.code.findbugs:annotations")
+    testCompileOnly("org.apache.hbase:hbase-annotations")
+    testImplementation("com.esotericsoftware:minlog")
+    testImplementation("com.esotericsoftware:reflectasm")
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
