--- a/server/pxf-s3/build.gradle
+++ b/server/pxf-s3/build.gradle
@@ -20,13 +20,13 @@ dependencies {
     implementation("commons-codec:commons-codec")
     implementation("commons-lang:commons-lang")
     implementation("org.apache.commons:commons-lang3")
-    implementation("org.apache.httpcomponents:httpclient:4.5.13") { transitive = false }
-    implementation("org.apache.httpcomponents:httpcore:4.4.14") { transitive = false }
-    implementation("org.apache.hadoop:hadoop-aws:${hadoopVersion}") { transitive = false }
-    implementation("com.amazonaws:aws-java-sdk-core:${awsJavaSdk}") { transitive = false }
-    implementation("com.amazonaws:aws-java-sdk-kms:${awsJavaSdk}") { transitive = false }
-    implementation("com.amazonaws:aws-java-sdk-s3:${awsJavaSdk}") { transitive = false }
-    implementation("joda-time:joda-time") { transitive = false }
+    implementation("org.apache.httpcomponents:httpclient")           { transitive = false }
+    implementation("org.apache.httpcomponents:httpcore")             { transitive = false }
+    implementation("org.apache.hadoop:hadoop-aws")                   { transitive = false }
+    implementation("com.amazonaws:aws-java-sdk-core")                { transitive = false }
+    implementation("com.amazonaws:aws-java-sdk-kms")                 { transitive = false }
+    implementation("com.amazonaws:aws-java-sdk-s3")                  { transitive = false }
+    implementation("joda-time:joda-time")                            { transitive = false }
     implementation("org.slf4j:slf4j-api")
 
     /*******************************
