downgraded Gradle to 6.8.2 (#673)

--- a/server/pxf-hdfs/build.gradle
+++ b/server/pxf-hdfs/build.gradle
@@ -89,8 +89,8 @@ dependencies {
     implementation("org.mortbay.jetty:jetty-util")                   { transitive = false }
 
     // GCS jars and dependencies
-    implementation("com.google.cloud.bigdataoss:gcs-connector")      { transitive = false
-        artifact { classifier = "shaded" }                                                }
+    implementation("com.google.cloud.bigdataoss:gcs-connector:hadoop2-1.9.17:shaded")
+                                                                     { transitive = false }
 
     /*******************************
      * Test Dependencies
