misc updates to build oss docs via docker (#679)
* misc updates to build oss docs via docker

- update Dockerfile and readme
- use ruby 2.5 image
- remove Gemfile.lock

* remove generated files between doc builds

* capitalize the i

--- a/concourse/docker/docs/Dockerfile
+++ b/concourse/docker/docs/Dockerfile
@@ -1,32 +1,17 @@
-FROM ruby:2.3
+FROM ruby:2.5
 
-RUN /bin/bash -l -c "gem install bundler --no-document -v '=1.16.1'"
-
-RUN /bin/bash -l -c "mkdir /temprackup"
-
-RUN /bin/bash -l -c "echo $'source \'http://rubygems.org\' \n\
-    ruby \'~> 2.3.0\'\n\
-    gem \'rack\', \'~> 2.0.1\'\n\
-    gem \'rack-rewrite\'\n\
-    gem \'puma\' \n\
-    gem \'therubyracer\' \n\
-    gem \'sendgrid-ruby\', \'< 3.0\' \n\
-    gem \'elasticsearch\' ' > /temprackup/Gemfile"
-
-RUN /bin/bash -l -c "cd /temprackup && bundle install"
-
-RUN /bin/bash -l -c "mkdir /temp"
-RUN echo 'source "https://rubygems.org"' > /temp/Gemfile
-RUN echo "gem 'bookbindery'" >> /temp/Gemfile
-RUN echo "gem 'libv8', '3.16.14.7'" >> /temp/Gemfile
-RUN /bin/bash -l -c "cd /temp && bundle install"
+RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - ; \
+    apt-get install -y nodejs
+RUN gem install bundler:1.17.3 \
+    elasticsearch:2.0.2 \
+    faraday:0.15.4 \
+    nokogiri:1.11.2 \
+    mimemagic:0.3.9 \
+    sendgrid-ruby:1.1.6
 
 RUN /bin/bash -l -c "cp /etc/hosts ~/hosts.new"
 RUN /bin/bash -l -c 'sed -i -E "s/(::1\s)localhost/\1/g" ~/hosts.new'
 
-RUN echo "export PATH=$PATH:/usr/local/bundle/bin" >> /etc/profile
-RUN echo "alias rackup='rackup -o 0.0.0'" >> /etc/profile
-
 EXPOSE 9292
 
-ENTRYPOINT ["/bin/sh", "-c" , "cat ~/hosts.new > /etc/hosts && . /etc/profile && alias rackup='rackup -o 0.0.0.0' && /bin/bash -l" ]
+ENTRYPOINT ["/bin/sh", "-c" , "cat ~/hosts.new > /etc/hosts && /bin/bash -l"]
