--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -16,6 +16,7 @@ pxf.metrics.fragments.enabled=true
 pxf.metrics.records.enabled=true
 pxf.metrics.bytes.enabled=true
 pxf.metrics.report-frequency=1000
+pxf.fragmenter-cache.expiration=10s
 
 spring.profiles.active=default
 
