--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,15 +22,23 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 6.1.0 (06/08/2021)
+            ## 6.2.0 (09/08/2021)
 
             ### Enhancements:
 
-            [#633](https://github.com/greenplum-db/pxf/pull/633) Upgrade go dependencies
-            [#636](https://github.com/greenplum-db/pxf/pull/636) Add support for reading and writing arrays in AVRO
-            [#638](https://github.com/greenplum-db/pxf/pull/638) Report exception class if there's no exception message
-            [#640](https://github.com/greenplum-db/pxf/pull/640) Support reading JSON arrays and objects into Greenplum text columns
-            [#644](https://github.com/greenplum-db/pxf/pull/644) Allow configuring connection timeout for data uploads to PXF
+            [#662](https://github.com/greenplum-db/pxf/pull/662) Remove the error-causing check
+            [#670](https://github.com/greenplum-db/pxf/pull/670) Upgrade Spring Boot to 2.5.2, Gradle to 7
+            [#675](https://github.com/greenplum-db/pxf/pull/675) pxf-hdfs: support for reading lists from ORC files
+            [#688](https://github.com/greenplum-db/pxf/pull/688) Introduced operation retries when GSS connection failures are encountered
+            [#687](https://github.com/greenplum-db/pxf/pull/687) Enhanced logging to include fragment info and minor alignment changes
+            [#689](https://github.com/greenplum-db/pxf/pull/689) external-table: add simple cURL debug callback function
+
+            ### Bug Fixes:
+
+            [#680](https://github.com/greenplum-db/pxf/pull/680) fix CURLOPT_RESOLVE optimization
+            [#691](https://github.com/greenplum-db/pxf/pull/691) Added dataSource to Fragmenter Cache key, made cache expiration configurable
+            [#696](https://github.com/greenplum-db/pxf/pull/696) Enum and bytea types are now handled properly for external tables using FORMAT "TEXT" or FORMAT "CSV"
+            [#697](https://github.com/greenplum-db/pxf/pull/697) Fixed NullPointerException in GSS failure handling retry logic
 
           draft: false
           prerelease: false
