Remove CI logic for adjusting GPHOME on Ubuntu (#702)
A recent changein GPDB to how greenplum_path.sh is generated caused the
grep for GPHOME to start failing. This code was only being run when the
target OS is Ubuntu. It looks like the binary tarball no longer expects
to be in /usr/local/gpdb. The only combination of CI
script/task/pipeline that is still using a binary tarball of GPDB is the
certification pipeline.

While manually reviewing the CI code to determine which CI tasks would
be impacted by this change, an unused task was identified and removed.

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/concourse/pipelines/certification_pipeline.yml
+++ b/concourse/pipelines/certification_pipeline.yml
@@ -57,7 +57,17 @@ resources:
   type: git
   icon: git
   source:
-    tag_filter: release-*
+    # This pipeline should be using a release tag for running
+    # the certification tests, but the Ubuntu test is red on the latest release
+    # of PXF (currently 6.2.0) because of an upstream change in
+    # greenplum_path.sh. The upstream change only impacts PXF's CI code and
+    # not the product's functionality. Until the next release of PXF is tagged
+    # this pipeline should be pointed at the master branch and have the pxf_src
+    # resource pinned to the commit with the fixed CI code. After the next
+    # release, this should be reverted back to using a tag_filter.
+    # TODO: revert this change and unpin resouce in UI.
+    #tag_filter: release-*
+    branch: master
     uri: {{pxf-git-remote}}
 
 ## ---------- Docker Images ----------
