--- a/concourse/tasks/test_pxf_on_ccp.yml
+++ b/concourse/tasks/test_pxf_on_ccp.yml
@@ -10,6 +10,8 @@ inputs:
   optional: true
 - name: dataproc_2_env_files
   optional: true
+- name: ipa_env_files
+  optional: true
 - name: pxf-automation-dependencies
   optional: true
 - name: singlecluster
