--- a/server/build.gradle
+++ b/server/build.gradle
@@ -93,6 +93,17 @@ configure(javaProjects) {
             dependency("org.apache.commons:commons-compress:1.20")
             dependency("org.apache.htrace:htrace-core:3.1.0-incubating")
             dependency("org.apache.htrace:htrace-core4:4.0.1-incubating")
+
+            // --- bump log4j2 to 2.15.0 for CVE-2021-44228 fix, revert once
+            // org.springframework.boot:spring-boot-starter-log4j2 is upgraded to bundle log4j2:2.15.0+
+            dependencySet(group:"org.apache.logging.log4j", version:"2.15.0") {
+                entry("log4j-jul")
+                entry("log4j-api")
+                entry("log4j-core")
+            }
+            dependency("org.apache.logging.log4j:log4j-slf4j-impl:2.15.0")
+            // --- end of CVE patch
+
             dependency("org.apache.zookeeper:zookeeper:3.4.6")
             dependency("org.codehaus.woodstox:stax2-api:3.1.4")
             dependency("org.datanucleus:datanucleus-api-jdo:4.2.4")
