--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,23 +22,14 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 6.2.0 (09/08/2021)
-
-            ### Enhancements:
-
-            [#662](https://github.com/greenplum-db/pxf/pull/662) Remove the error-causing check
-            [#670](https://github.com/greenplum-db/pxf/pull/670) Upgrade Spring Boot to 2.5.2, Gradle to 7
-            [#675](https://github.com/greenplum-db/pxf/pull/675) pxf-hdfs: support for reading lists from ORC files
-            [#688](https://github.com/greenplum-db/pxf/pull/688) Introduced operation retries when GSS connection failures are encountered
-            [#687](https://github.com/greenplum-db/pxf/pull/687) Enhanced logging to include fragment info and minor alignment changes
-            [#689](https://github.com/greenplum-db/pxf/pull/689) external-table: add simple cURL debug callback function
+            ## 6.2.1 (12/16/2021)
 
             ### Bug Fixes:
 
-            [#680](https://github.com/greenplum-db/pxf/pull/680) fix CURLOPT_RESOLVE optimization
-            [#691](https://github.com/greenplum-db/pxf/pull/691) Added dataSource to Fragmenter Cache key, made cache expiration configurable
-            [#696](https://github.com/greenplum-db/pxf/pull/696) Enum and bytea types are now handled properly for external tables using FORMAT "TEXT" or FORMAT "CSV"
-            [#697](https://github.com/greenplum-db/pxf/pull/697) Fixed NullPointerException in GSS failure handling retry logic
-
+            - [#710](https://github.com/greenplum-db/pxf/pull/710) Allow skipping the header for *:text:multi profiles
+            - [#719](https://github.com/greenplum-db/pxf/pull/719) Add explicit UnsupportedException for Hive transactional tables
+            - [#721](https://github.com/greenplum-db/pxf/pull/721) Set default MySQL fetchSize to Integer.MIN_VALUE
+            - [#726](https://github.com/greenplum-db/pxf/pull/726) pxf-hive: Catch TTransportException when working with metastore client
+            - [#727](https://github.com/greenplum-db/pxf/pull/727) bump log4j2 version to 2.16.0
           draft: false
           prerelease: false
