--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,14 +22,11 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 6.2.1 (12/16/2021)
+            ## 6.2.2 (12/22/2021)
 
             ### Bug Fixes:
 
-            - [#710](https://github.com/greenplum-db/pxf/pull/710) Allow skipping the header for *:text:multi profiles
-            - [#719](https://github.com/greenplum-db/pxf/pull/719) Add explicit UnsupportedException for Hive transactional tables
-            - [#721](https://github.com/greenplum-db/pxf/pull/721) Set default MySQL fetchSize to Integer.MIN_VALUE
-            - [#726](https://github.com/greenplum-db/pxf/pull/726) pxf-hive: Catch TTransportException when working with metastore client
-            - [#727](https://github.com/greenplum-db/pxf/pull/727) bump log4j2 version to 2.16.0
+            - [#732](https://github.com/greenplum-db/pxf/pull/732) Downgrade to Spring Boot 2.4.3
+            - [#733](https://github.com/greenplum-db/pxf/pull/733) Bump log4j2 version to 2.17.0
           draft: false
           prerelease: false
