Redirect PXF stdout and stderr to files in PXF_LOGDIR (#720)
Most of log messages generated by PXF are captured by log4j and sent to
the configured log file. However, log messages from start-up before
log4j is fully configured are sent to stdout/stderr. Additionally, some
debug output (e.g., `-Dsun.security.krb5.debug=true`) are only sent to
stdout/stderr. Redirecting stdout/stderr of the JVM process will allow
for easier access to this debug info.

Additionally, this comment moves the default value for the log level
from pxf-log4j2.xml to pxf-application.properties. The `bundle` lookup
will throw an error if the key is not found in the file. To suppress
this output, the key is uncommented in the properties file. Removing it
from the XML file prevents the default value from being specified in two
locations.

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -101,6 +101,7 @@ configure(javaProjects) {
                 entry("log4j-jul")
                 entry("log4j-api")
                 entry("log4j-core")
+                entry("log4j-spring-boot")
             }
             dependency("org.apache.logging.log4j:log4j-slf4j-impl:2.17.1")
             // --- end of CVE patch
