--- a/server/pxf-service/src/main/resources/application.properties
+++ b/server/pxf-service/src/main/resources/application.properties
@@ -50,5 +50,6 @@ pxf.task.pool.max-size=${pxf.max.threads:200}
 pxf.task.pool.queue-capacity=0
 
 # logging
+pxf.log.level=info
 logging.file.name=${pxf.logdir:/tmp}/pxf-service.log
 logging.file.path=${pxf.logdir:/tmp}
