--- a/server/pxf-service/build.gradle
+++ b/server/pxf-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation("commons-collections:commons-collections")
     implementation("commons-lang:commons-lang")
     implementation("org.springframework.boot:spring-boot-starter-log4j2")
+    implementation("org.apache.logging.log4j:log4j-spring-boot")
     implementation('org.springframework.boot:spring-boot-starter-actuator')
     implementation('io.micrometer:micrometer-registry-prometheus')
 
