--- a/concourse/docker/pxf-dev-base/gpdb7/centos7/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb7/centos7/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=gcr.io/data-gpdb-public-images/gpdb7-centos7-test:latest
+ARG BASE_IMAGE=gcr.io/data-gpdb-public-images/gpdb7-centos7-test:net-tools
 
 FROM ${BASE_IMAGE}
 
