--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,11 +22,13 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 6.2.2 (12/22/2021)
+            ## 6.2.3 (01/31/2022)
 
             ### Bug Fixes:
 
-            - [#732](https://github.com/greenplum-db/pxf/pull/732) Downgrade to Spring Boot 2.4.3
-            - [#733](https://github.com/greenplum-db/pxf/pull/733) Bump log4j2 version to 2.17.0
+            - [#720](https://github.com/greenplum-db/pxf/pull/720) Redirect PXF stdout and stderr to files in PXF_LOGDIR
+            - [#735](https://github.com/greenplum-db/pxf/pull/735) Bumped Log4j2 version to 2.17.1
+            - [#740](https://github.com/greenplum-db/pxf/pull/740) Bump go version to 1.17.6
+            - [#741](https://github.com/greenplum-db/pxf/pull/741) Improved performance of iterating over a list of fragments
           draft: false
           prerelease: false
