Add RHEL8 image for running rpmrebuild to add OSL to RPMs (#750)
While adding the new RHEL 8 rpmrebuild image to the cloudbuild pipeline,
additional missing images were also added.

Co-authored-by: Bradford D. Boyle <bradfordb@vmware.com>
Co-authored-by: Ashuka Xue <axue@vmware.com>

--- a/concourse/docker/rpmrebuild/cloudbuild.yaml
+++ b/concourse/docker/rpmrebuild/cloudbuild.yaml
@@ -15,7 +15,19 @@ steps:
     - 'concourse/docker/rpmrebuild/centos'
   waitFor: ['-']
 
+# Builds the rpmrebuild-rhel8 image
+- name: 'gcr.io/cloud-builders/docker'
+  id: rpmrebuild-rhel8-image
+  args:
+    - 'build'
+    - '--build-arg=BASE_IMAGE=${_PRIVATE_BASE_IMAGE_REPOSITORY}/gpdb6-rhel8-test:latest'
+    - '--tag=gcr.io/$PROJECT_ID/rpmrebuild-rhel8:latest'
+    - '-f'
+    - 'concourse/docker/rpmrebuild/rhel/Dockerfile'
+    - 'concourse/docker/rpmrebuild/rhel'
+  waitFor: ['-']
+
 # Push images from Cloud Build to Container Registry
 images:
   - 'gcr.io/$PROJECT_ID/rpmrebuild-centos7:latest'
-
+  - 'gcr.io/$PROJECT_ID/rpmrebuild-rhel8:latest'
