add backward compatibility to passing requirement for promote gate (#758)

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -1621,6 +1621,7 @@ jobs:
 {% endfor %}
 {% set gp_ver = None %}
 {% set gp_ver = 6 %}
+      - Test PXF-GP[[gp_ver]] Backward Compatibility on RHEL8
       - Test PXF-GP[[gp_ver]] Backward Compatibility on Ubuntu18
 {% set gp_ver = None %}
 {% for gp_ver in range(5, 7) %}
